--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     overflow: hidden;
+    perspective: 1000px;
 }
 
 .card {
@@ -43,4 +44,35 @@ body {
     height: 200px;
     background-color: rgb(150, 150, 150);
     margin: 15px;
+    position: relative;
+    transform-origin: center;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+}
+
+.back {
+    background: #36c;
+    background: linear-gradient(115deg, transparent 75%, rgba(255, 255, 255, 0.8) 75%) 0 0,
+        linear-gradient(245deg, transparent 75%, rgba(255, 255, 255, 0.8) 75%) 0 0,
+        linear-gradient(115deg, transparent 75%, rgba(255, 255, 255, 0.8) 75%) 7px -15px,
+        linear-gradient(245deg, transparent 75%, rgba(255, 255, 255, 0.8) 75%) 7px -15px, #36c;
+    background-size: 15px 30px;
+}
+
+.back,
+.front {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotateY(0);
+    backface-visibility: hidden;
+}
+
+.front {
+    background-size: cover;
+    background-position: center;
+    transform-origin: center;
+    transform: rotateY(180deg);
 }
