--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
